--- a/src/components/IndividualScheduler/IndividualScheduler.module.scss
+++ b/src/components/IndividualScheduler/IndividualScheduler.module.scss
@@ -15,7 +15,7 @@
       display: flex;
       align-items: center;
       margin-right: 1rem;
-      font-size: 1rem;
+      font-size: 0.8rem;
       color: $dark-blue;
 
       p {
