--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
 @import "./assets/colors/colors";
 
 html {
@@ -24,13 +24,13 @@ html {
 
 *::-webkit-scrollbar-track {
   background-color: inherit;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Merriweather', sans-serif;
+  font-family: "Merriweather", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
