--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -11,12 +11,14 @@
       font-size: 1.2rem;
     }
 
-    .Stats {
+    .LeftSideWrapper {
+      width: 30rem;
+      max-width: 95%;
+      margin: 0 auto 1rem;
       .CurrentPatients {
-        width: 30rem;
-        max-width: 95%;
-        margin: 1rem auto;
+        width: 100%;
         padding: 1rem;
+        margin: 1rem auto;
         background-color: $dark-blue;
         border-radius: 1rem;
         text-align: center;
@@ -28,13 +30,10 @@
       }
     }
 
-    .PatientsListWrapper {
+    .RightSideWrapper {
       width: 30rem;
       max-width: 95%;
-      min-height: 100%;
       margin: 1rem auto 0;
-      display: flex;
-      flex-direction: column;
 
       .PatientsListTable {
         table-layout: fixed;
@@ -128,7 +127,6 @@
     }
   }
 }
-
 @media (min-width: 1023px) {
   .Home {
     @include pageWrapper1023;
@@ -136,12 +134,15 @@
     .Main {
       display: flex;
 
-      .Stats {
-        width: auto;
+      .LeftSideWrapper {
+        width: 50%;
+        .CurrentPatients {
+          width: 95%;
+        }
       }
 
-      .PatientsListWrapper {
-        width: auto;
+      .RightSideWrapper {
+        width: 50%;
         .PatientsListTable {
           width: 95%;
           margin: 0 auto;
@@ -149,6 +150,17 @@
         .NotesList {
           width: 95%;
         }
+      }
+    }
+  }
+}
+
+@media (min-width: 1100px) {
+  .Home {
+    .Main {
+      .LeftSideWrapper,
+      .RightSideWrapper {
+        width: auto;
       }
     }
   }
